--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,10 @@ body {
           font-size: 1.7em;
           resize: none;
           width: 15.4em;
-          height: auto; }
+          height: auto;
+          -webkit-box-sizing: border-box;
+          -moz-box-sizing: border-box;
+          box-sizing: border-box; }
         #contact #contactHolder #form form .formel ::placeholder {
           font-size: 0.7em;
           font-family: "Roboto";
