--- a/css/style.scss
+++ b/css/style.scss
@@ -448,6 +448,10 @@ body{
                         resize: none;
                         width:15.4em;
                         height: auto;
+                        -webkit-box-sizing: border-box;
+	                    -moz-box-sizing: border-box;
+	                    box-sizing: border-box;
+
                     }
                     ::placeholder{
                         font-size:0.7em;
