--- a/css/responsive.css
+++ b/css/responsive.css
@@ -414,7 +414,12 @@
   #about #about-image {
     display: none; }
   #about #about-text #textHolder {
-    text-align: justify; } }
+    text-align: justify; }
+
+  #footer #links {
+    display: flex;
+    flex-direction: column;
+    align-items: center; } }
 @media screen and (max-width: 380px) {
   #slider-nav #slider #info h1 {
     font-size: 2.5em; }
@@ -456,12 +461,7 @@
     width: 28vw; }
 
   #skills .sk::after {
-    width: 12vw; }
-
-  #footer #links {
-    display: flex;
-    flex-direction: column;
-    align-items: center; } }
+    width: 12vw; } }
 @media screen and (max-width: 330px) {
   #slider-nav #slider #info h1 {
     font-size: 2em; }
