--- a/css/responsive.css
+++ b/css/responsive.css
@@ -455,7 +455,8 @@
       padding: 0.2em 37vw; }
 
   .heading::after, #contact .co::after {
-    width: 26vw; }
+    width: 26vw;
+    text-align: center; }
 
   #about #about-text #textHolder .ab::after, #education .ed::after {
     width: 28vw; }
