--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -649,6 +649,7 @@
   }
   .heading::after, #contact .co::after {
     width: 26vw;
+   text-align: center;
   }
   #about #about-text #textHolder .ab::after, #education .ed::after {
     width: 28vw;
