--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -649,7 +649,7 @@
   }
   .heading::after, #contact .co::after {
     width: 26vw;
-   text-align: center;
+   margin:0px auto;
   }
   #about #about-text #textHolder .ab::after, #education .ed::after {
     width: 28vw;
