--- a/css/responsive.css
+++ b/css/responsive.css
@@ -32,12 +32,21 @@
   #skills #skill-holder .skill .skill-heading {
     text-align: center; } }
 @media screen and (max-width: 1388px) {
-  #slider-nav #slider #info {
-    width: 55%; }
-    #slider-nav #slider #info #textHolder {
-      width: 100%; }
-  #slider-nav #slider #authorPhoto {
-    width: 40%; }
+  #slider-nav #slider {
+  /*#authorPhoto {
+
+ 
+  }*/ }
+    #slider-nav #slider #info {
+      width: 50%; }
+      #slider-nav #slider #info #textHolder {
+        width: 100%; }
+        #slider-nav #slider #info #textHolder h1 {
+          font-size: 3.5em; }
+        #slider-nav #slider #info #textHolder h2 {
+          font-size: 2.2em; }
+        #slider-nav #slider #info #textHolder p {
+          font-size: 1.2em; }
 
   #project .project-block {
     width: 14vw; }
@@ -59,6 +68,13 @@
 
   #skills .sk::after {
     width: 6vw; } }
+@media screen and (max-width: 1200px) {
+  #slider-nav #nav #menu {
+    width: 100%;
+    display: flex;
+    justify-content: center; }
+    #slider-nav #nav #menu ul {
+      width: 100%; } }
 @media screen and (max-width: 1120px) {
   #project .project-block {
     width: 15vw; }
@@ -121,13 +137,6 @@
   #skills #skill-holder #group1, #skills #skill-holder #group2 {
     width: 50%; }
 
-  #slider-nav #nav #menu {
-    width: 100%;
-    display: flex;
-    justify-content: center; }
-    #slider-nav #nav #menu ul {
-      width: 100%; }
-
   #education #educationHolder #educationBlocks #educationBlockHolder .educationBlock {
     padding: 1.2em; }
     #education #educationHolder #educationBlocks #educationBlockHolder .educationBlock .school {
@@ -143,40 +152,31 @@
     width: 13vw; }
 
   #skills .sk::after {
-    width: 5vw; } }
-@media screen and (max-width: 992px) {
-  #project .project-block {
-    width: 50%;
-    display: flex;
-    padding: 0px;
-    margin: 0px;
-    height: auto; }
-    #project .project-block .content .technologies {
-      font-size: 1.8vw; }
-    #project .project-block .project-image {
-      width: 50%;
-      height: auto; }
-      #project .project-block .project-image img {
-        width: 100%;
-        height: 100%;
-        border-bottom-left-radius: 50px;
-        border-top-right-radius: 0px; }
-    #project .project-block .content {
-      width: 50%;
-      padding: 10px 0px; }
+    width: 5vw; }
 
-  #slider-nav #slider #authorPhoto #imageHolder {
-    width: 90%; }
-    #slider-nav #slider #authorPhoto #imageHolder img {
-      width: 100%; }
+  #slider-nav #slider #info #textHolder h1 {
+    font-size: 3em; }
+  #slider-nav #slider #info #textHolder h2 {
+    font-size: 2em; }
+  #slider-nav #slider #info #textHolder p {
+    font-size: 1em; } }
+@media screen and (max-width: 992px) {
+  #project #project-holder {
+    padding: 3em 1em; }
+    #project #project-holder .project-block {
+      width: 32%; }
+
+  #slider-nav #slider #authorPhoto {
+    width: 50%; }
+    #slider-nav #slider #authorPhoto #imageHolder {
+      width: 70%; }
+      #slider-nav #slider #authorPhoto #imageHolder img {
+        width: 100%; }
 
   #skills #skill-holder .skill .skill-heading {
     font-size: 1.2em; }
   #skills #skill-holder .skill .progressFrame {
     height: 1.5vh; }
-
-  #project #project-holder {
-    padding: 3em; }
 
   #slider-nav #slider #info h1 {
     font-size: 3.3em; }
@@ -203,7 +203,7 @@
     width: 50%; } }
 @media screen and (max-width: 850px) {
   #slider-nav #slider #authorPhoto #imageHolder {
-    width: 95%; }
+    width: 90%; }
 
   #project .project-block .content .project-heading {
     font-size: 2.2vw; }
@@ -243,7 +243,10 @@
     width: 100%; }
 
   #slider-nav #slider #authorPhoto {
-    width: 45%; }
+    width: 50%; }
+
+  #slider-nav #slider #info #textHolder {
+    padding: 1em; }
 
   #project .project-block {
     width: 65%; }
@@ -268,10 +271,19 @@
     width: 15vw; }
 
   #skills .sk::after {
-    width: 7vw; } }
+    width: 7vw; }
+
+  #slider-nav #slider #info #textHolder h1 {
+    font-size: 2.5em; }
+  #slider-nav #slider #info #textHolder h2 {
+    font-size: 1.6em; }
+  #slider-nav #slider #info #textHolder p {
+    font-size: 1em; }
+
+  #slider-nav #slider #authorPhoto #imageHolder img {
+    width: 100%; } }
 @media screen and (max-width: 625px) {
   #slider-nav #slider {
-    padding-top: 2em;
     padding-bottom: 0em; }
   #slider-nav #nav {
     flex-direction: column; }
@@ -296,15 +308,14 @@
       min-height: 0; }
       #slider-nav #slider #info #textHolder {
         padding: 1em; }
+        #slider-nav #slider #info #textHolder h2 {
+          font-size: 1.8em; }
+        #slider-nav #slider #info #textHolder p {
+          font-size: 1.1em; }
 
-  #project #project-holder {
-    padding: 1em; }
-  #project .project-block {
-    width: 100%; }
-    #project .project-block .content .project-heading {
-      font-size: 5vw; }
-    #project .project-block .content .technologies {
-      font-size: 3.8vw; }
+  #project #project-holder .project-block {
+    width: 60%;
+    height: 150px; }
 
   #skills #skill-holder {
     padding: 1em; }
@@ -320,6 +331,10 @@
     font-size: 2.4em; }
   #slider-nav #slider #info p {
     font-size: 1.3em; }
+  #slider-nav #slider #info #textHolder p {
+    display: none; }
+    #slider-nav #slider #info #textHolder p:last-of-type {
+      display: block; }
 
   #education #educationHolder #educationImage {
     display: none; }
@@ -338,7 +353,7 @@
     #contact #contactHolder #info {
       width: 100%;
       order: 2;
-      padding-top: 1em; }
+      padding-top: 2em; }
       #contact #contactHolder #info #info-holder .info-heading, #contact #contactHolder #info #info-holder p {
         display: none; }
     #contact #contactHolder #form {
@@ -370,17 +385,17 @@
   #skills .sk::after {
     width: 10vw; } }
 @media screen and (max-width: 480px) {
+  .organize {
+    padding: 3em 0em; }
+
   #slider-nav #slider #info h1 {
     font-size: 3em; }
   #slider-nav #slider #info h2 {
     font-size: 2.2em; }
-  #slider-nav #slider #info p {
-    display: none; }
-    #slider-nav #slider #info p:last-of-type {
-      display: block; }
 
   #education #educationHolder #educationBlocks #educationBlockHolder .educationBlock {
-    width: 100%; }
+    width: 100%;
+    margin-top: 2.5em; }
 
   #slider-nav #slider #authorPhoto #imageHolder {
     width: 55%; }
@@ -408,9 +423,6 @@
       display: flex;
       justify-content: center; }
 
-  .organize {
-    padding: 0em; }
-
   #about #about-image {
     display: none; }
   #about #about-text #textHolder {
@@ -419,7 +431,13 @@
   #footer #links {
     display: flex;
     flex-direction: column;
-    align-items: center; } }
+    align-items: center; }
+
+  #project {
+    padding: 4em 0em; }
+    #project #project-holder .project-block {
+      width: 90%;
+      height: 110px; } }
 @media screen and (max-width: 380px) {
   #slider-nav #slider #info h1 {
     font-size: 2.5em; }
@@ -455,8 +473,7 @@
       padding: 0.2em 37vw; }
 
   .heading::after, #contact .co::after {
-    width: 26vw;
-    margin: 0px auto; }
+    width: 26vw; }
 
   #about #about-text #textHolder .ab::after, #education .ed::after {
     width: 28vw; }
@@ -464,13 +481,13 @@
   #skills .sk::after {
     width: 12vw; } }
 @media screen and (max-width: 330px) {
-  #slider-nav #slider #info h1 {
+  #slider-nav #slider #info #textHolder h1 {
     font-size: 2em; }
-  #slider-nav #slider #info h2 {
+  #slider-nav #slider #info #textHolder h2 {
     font-size: 1.6em; }
 
   #project #project-holder {
-    padding: 0.5em; }
+    padding: 3em 0em; }
   #project .project-block .content .technologies {
     font-size: 4.2vw; }
 
