--- a/css/style.scss
+++ b/css/style.scss
@@ -117,7 +117,7 @@ body{
     }
     #slider{
         width:100%;
-        padding: 15vh 0;
+      padding: 6 0;
         display: flex;
         justify-content: space-between;
         #info{
@@ -132,14 +132,17 @@ body{
             
             h1{
                 font-size:5em;
+      
                 
             }
             h2{
-                font-size:3em;  
+                font-size:3em;
+               
             }
             p{
                 font-size:1.2em; 
                 margin: 0.3em 0;
+                padding:0.1em 0;  
             }
         }
         #authorPhoto{
@@ -156,7 +159,7 @@ body{
                
                
                img{
-                   width: 18vw;
+                  width: 18vw;
                    height: 100%;
                    border-radius:50%;
                    
@@ -167,7 +170,7 @@ body{
 }
 .organize{
     width:100%;
-    padding:2em 0;
+    padding:7em 0;
 }
 .heading{
     font-size: 3.5em;
@@ -180,49 +183,37 @@ body{
         background:$mark;
         display: block;
         position: absolute;
-        bottom:0px;
+        top:1.3em;
         z-index: 999;
 
     }
 }
 #project{
    
+    width:100%;
     
     #project-holder{
-        padding: 5em;
-    }
-  
-    .project-block{
-        width:11vw;
-      height:25vh;
-        background: $elementColor;
-      border-radius:50px; 
+        padding-top: 5em;
+        width:100%;
+        @include flex-horizontalniSpar();
+    flex-wrap: wrap;
+    .project-block
+    {
+        width: 26%;
+       min-height:200px;
+       margin: 1em;
+       padding: 2em;
+       position: relative;
+       background: $letter;
+     border-radius:30px; 
+     @include flex-horizontalniCentar();
+        &:hover{
+            background: $elementColor;
+            transition: 1s;
     
-    .project-image{
-       
-       width: 100%;
-       
-       img{
-           width: 100%;
-           
-        border-top-left-radius: 50px;
-        border-top-right-radius: 50px;
-       }
-    }
-    .content{
-      text-align: center;
-        width: 100%;
-        padding: 1em;
-       
-        .project-heading{
-            font-size:1.2vw;
         }
-        .technologies{
-            font-size:1vw;
-        }
-        h3,p{
-            padding: 0.1em;
-        }
+       
+        
     }
 }
 }
@@ -400,15 +391,16 @@ body{
                 .info-heading
                 {
                     font-size: 2em;
-                    
+                     padding: 0.2em 0em;
                 }
                 p,#social{
+                   
                     font-size:1.4em;
+                    padding: 0.2em 0;
                 }
-                p{
-                    padding: 0.1em 0;
-                }
+     
                 #social{
+
                     a{
                         color:$letter;
                     }
@@ -461,16 +453,17 @@ body{
                     button{
                         font-family:"Roboto";
                         font-size: 1.5em;
-                        padding: 0.3em 2em;
-                        background: $mark;
-                        border:none;
+                        padding: 0.1em 1em;
+                        background: transparent;
+                        border: none;
+                        border-bottom:2px solid $mark;
                         color:$letter;
-                        border-radius: 20px;
                         &:hover{
-                            background: $letter;
                             color:$mark;
+                            border-bottom:2px solid $letter;
                             transition: .6s;
                         }
+                       
                     }
                 }
 
