--- a/css/responsive.css
+++ b/css/responsive.css
@@ -479,7 +479,10 @@
     width: 28vw; }
 
   #skills .sk::after {
-    width: 12vw; } }
+    width: 12vw; }
+
+  #skills #skill-holder #group1 {
+    padding-top: 1.5em; } }
 @media screen and (max-width: 330px) {
   #slider-nav #slider #info #textHolder h1 {
     font-size: 2em; }
