--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,8 @@ body {
     display: block;
     position: absolute;
     top: 1.3em;
-    z-index: 999; }
+    z-index: 999;
+    margin: auto; }
 
 #project {
   width: 100%; }
