--- a/css/responsive.css
+++ b/css/responsive.css
@@ -163,8 +163,8 @@
 @media screen and (max-width: 992px) {
   #project #project-holder {
     padding: 3em 1em; }
-    #project #project-holder .project-block {
-      width: 32%; }
+    #project #project-holder .pr {
+      width: 45%; }
 
   #slider-nav #slider #authorPhoto {
     width: 50%; }
@@ -313,9 +313,8 @@
         #slider-nav #slider #info #textHolder p {
           font-size: 1.1em; }
 
-  #project #project-holder .project-block {
-    width: 60%;
-    height: 150px; }
+  #project #project-holder .pr {
+    width: 80%; }
 
   #skills #skill-holder {
     padding: 1em; }
@@ -435,9 +434,11 @@
 
   #project {
     padding: 4em 0em; }
-    #project #project-holder .project-block {
-      width: 90%;
-      height: 110px; } }
+    #project #project-holder .pr {
+      width: 100%; }
+      #project #project-holder .pr .project-block {
+        width: 90%;
+        height: 110px; } }
 @media screen and (max-width: 380px) {
   #slider-nav #slider #info h1 {
     font-size: 2.5em; }
