--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,9 @@ $letter:#fff;
 $background:#100E17;
 $mark:#FDA226;
 $elementColor:#1F1E24;
+html{
+    scroll-behavior: smooth;
+}
 *{
     margin:0px;
     padding:0px;
@@ -185,10 +188,12 @@ body{
         position: absolute;
         top:1.3em;
         z-index: 999;
-        margin:auto;
+        margin:0px auto;
 
     }
 }
+
+   
 #project{
    
     width:100%;
@@ -198,10 +203,16 @@ body{
         width:100%;
         @include flex-horizontalniSpar();
     flex-wrap: wrap;
-    .project-block
-    {
+    .pr{
         width: 26%;
-       min-height:200px;
+        min-height:200px;
+        @include flex-horizontalniCentar();
+       
+        .project-block
+    {
+        
+      width:100%;
+      min-height:200px;
        margin: 1em;
        padding: 2em;
        position: relative;
@@ -218,6 +229,8 @@ body{
     }
 }
 }
+}
+
 #skills
 {
     .sk{
@@ -476,11 +489,17 @@ body{
 #footer{
     width: 100%;
     background: $elementColor;
-    height: 2%;
+    height: 4%;
     #links{
         @include flex-vertikalniCentar();
         @include flex-horizontalniCentar();
         flex-direction: row;
+        a{
+            i{
+                font-size:2em;
+                margin:0.4em;
+            }
+        }
     }
   
     a{
